# 10AcWeek3

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  COMMIT_PLAN.md  COMPREHENSIVE_PROJECT_EXPLANATION.md  CURRENT_OUTPUTS_EXPLAINED.md  DEMOS.md  DEMO_GUIDE.md  DOCKER_GUIDE.md  DOCLING_INTEGRATION.md  Dockerfile  ENTERPRISE_REPORT.md  FAILURE_MODE_ANALYSIS.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  HYBRID_VISION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  INTERIM_CHECKLIST.md  INTERIM_SUMMARY.md  MODERN_OCR_ARCHITECTURE.md  MODERN_OCR_INSTALL.md  Makefile  OCR_SETUP.md  PHASE_4_5_6_SUMMARY.md  PRODUCTION_PATTERN_GRADING.md  QUICKSTART.md  README.md  STAGE2_100_PERCENT_COMPLETE.md  STAGE2_FINAL_100_PERCENT.md  TEST_RESULTS.md  TEST_SUITE_COMPLETE.md  TODO.md  TRP1 Challenge Week 3_ The Document Intelligence Refinery.txt  UPGRADE_TO_100_PERCENT.md  VLM_PIPELINE_PLAN.md  check_ocr.py  create_native_pdf.py  demo.py  demo_complete_pipeline.py  (+28 more)
.github/workflows/: ci.yml
.refinery/: extraction_ledger.jsonl  facts.db
.refinery/ldus/: 2013-E.C-Assigned-regular-budget-and-expense_ldus.json  Annual_Report_JUNE-2018_ldus.json  Consumer Price Index July 2025_ldus.json  Consumer Price Index March 2025_ldus.json  tax_expenditure_ethiopia_2021_22_ldus.json  test_native_digital_ldus.json
.refinery/pageindex/: Annual_Report_JUNE-2018_pageindex.json  tax_expenditure_ethiopia_2021_22_pageindex.json  test_native_digital_pageindex.json
.refinery/profiles/: 2013-E.C-Assigned-regular-budget-and-expense.json  2013-E.C-Audit-finding-information.json  2013-E.C-Procurement-information.json  2018_Audited_Financial_Statement_Report.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.json  2019_Audited_Financial_Statement_Report.json  2020_Audited_Financial_Statement_Report.json  2021_Audited_Financial_Statement_Report.json  2022_Audited_Financial_Statement_Report.json  Annual_Report_JUNE-2017.json  Annual_Report_JUNE-2018.json  Annual_Report_JUNE-2020.json  Annual_Report_JUNE-2022.json  Annual_Report_JUNE-2023.json  Audit Report - 2023.json  CBE Annual Report 2006-7 .json  CBE Annual Report 2012-13.json  CBE Annual Report 2015-16_1.json  CBE Annual Report 2016-17.json  Consumer Price Index July 2025.json  Consumer Price Index March 2025.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json  test.json  test_native_digital.json
docs/: DOCLING_OPTIMIZATION_STRATEGY.md  DOMAIN_NOTES.md  GEMINI_SETUP.md  HYBRID_PIPELINE_IMPLEMENTATION.md  IMPROVEMENTS.md  MICRO_CROPPING.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_QUERY_INTERFACE.md  PHASE5_QUICK_REFERENCE.md  SHORT_CIRCUIT_TEST_RESULTS.md  SHORT_CIRCUIT_WATERFALL.md  TECHNOLOGY_FLOWCHART.md  TECHNOLOGY_STACK.md  TEST_SUMMARY.md  TOOLS_BY_STAGE.md  conf.py
report/: FINAL_REPORT.md  Interim Submission.docx  convert_final_report.py  convert_to_pdf.py
rubric/: extraction_rules.yaml
src/: __init__.py  chunking.py  config.py  data_quality.py  exceptions.py  logging_config.py  monitoring.py  performance.py  resilience.py  validation_utils.py
src/agents/: __init__.py  chunking.py  extractor.py  pageindex_builder.py  pageindex_builder_ai.py  query_agent.py  triage.py
src/chunking/: ldu_tree.py
src/models/: __init__.py  document_profile.py  extracted_document.py  ldu.py  pageindex.py  provenance.py
src/monitoring/: confidence_tracker.py  decision_tuner.py
src/strategies/: __init__.py  base.py  caption_binder.py  column_detector.py  enhanced_table.py  fast_text.py  figure_extractor.py  handwriting_ocr.py  hybrid_pipeline.py  layout_aware.py  list_detector.py  vision_augmented.py
src/utils/: camelot_extractor.py  docling_helper.py  docling_helper_optimized.py  fact_extractor.py  fact_extractor_ai.py  pdf_analyzer.py  pdf_classifier.py  pymupdf_extractor.py  structure_analyzer.py
src/validators/: __init__.py  structure_validator.py
tests/: README.md  conftest.py
tests/integration/: test_full_pipeline.py  test_hybrid_pipeline.py  test_pipeline.py
tests/unit/: test_chunking.py  test_edge_cases.py  test_improvements.py  test_mocked_strategies.py  test_query_agent.py  test_stage2_enhancements.py  test_triage.py
