[project]
name = "document-intelligence-refinery"
version = "1.0.0"
description = "Enterprise-grade agentic pipeline for unstructured document extraction at scale"
authors = [
    {name = "FDE Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    
    # PDF processing (always needed)
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
# Tier 1: Native PDF extraction
tier1 = [
    "camelot-py[cv]>=0.11.0",  # Table extraction
    "opencv-python>=4.8.0",     # Image processing for Camelot
    "docling>=1.0.0",           # Advanced layout analysis (heavy)
]

# Tier 2: Scanned PDF extraction with modern OCR
tier2 = [
    "google-generativeai>=0.3.0",     # Gemini Vision API
    "rapidocr-onnxruntime>=1.3.0",    # Fast local OCR (ONNX)
    "paddleocr>=2.7.0",                # Accurate OCR with bboxes
    "surya-ocr>=0.4.0",                # Highest accuracy OCR
]

# Stage 4: PageIndex
pageindex = [
    "faiss-cpu>=1.7.4",           # Vector database
    "sentence-transformers>=2.2.0", # Embeddings
    "numpy>=1.24.0",
]

# Stage 5: Query Interface
query = [
    "openai>=1.0.0",      # OpenAI API
    "anthropic>=0.7.0",   # Claude API
]

# Development tools
dev = [
    "black>=23.0.0",      # Code formatter
    "flake8>=6.0.0",      # Linter
    "mypy>=1.0.0",        # Type checker
    "isort>=5.12.0",      # Import sorter
    "pre-commit>=3.0.0",  # Git hooks
]

# Demo app
demo = [
    "streamlit>=1.28.0",  # Interactive web app
    "pillow>=10.0.0",     # Image processing
]

# All features
all = [
    "camelot-py[cv]>=0.11.0",
    "opencv-python>=4.8.0",
    "docling>=1.0.0",
    "google-generativeai>=0.3.0",
    "rapidocr-onnxruntime>=1.3.0",
    "paddleocr>=2.7.0",
    "surya-ocr>=0.4.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "streamlit>=1.28.0",
    "pillow>=10.0.0",
]

[project.scripts]
refinery = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
